--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,8 +35,11 @@ dependencies:
   cupertino_icons: ^1.0.2
   provider: ^6.0.2
   animated_splash_screen: ^1.2.0
-  mapbox_gl: ^0.15.0
-
+  geolocator: ^8.2.0
+  page_transition: ^2.0.5
+  google_maps_flutter: ^2.1.3
+  custom_info_window: ^1.0.1
+  clippy_flutter: ^2.0.0-nullsafety.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -61,6 +64,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - images/
+    - dataJson/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
