--- a/dataJson/app_ab_ubicacion.json
+++ b/dataJson/app_ab_ubicacion.json
@@ -8,7 +8,7 @@
   "longitud": -68.1147,
   "activo": true,
   "telefono": "No especificado",
-  "tipo":"Sociales"
+  "tipo":"Mercado"
 },{
   "_id": {
     "$oid": "62697f9d3bb568661cff93be"
@@ -19,7 +19,7 @@
   "longitud": -68.0533,
   "activo": true,
   "telefono": "NULL",
-  "tipo":"Deporte"
+  "tipo":"Bici"
 },{
   "_id": {
     "$oid": "62697f9d3bb568661cff93bf"
@@ -30,7 +30,7 @@
   "longitud": -68.0635,
   "activo": true,
   "telefono": "NULL",
-  "tipo":"Arte"
+  "tipo":"Deporte"
 },{
   "_id": {
     "$oid": "62697f9d3bb568661cff93c0"
@@ -41,7 +41,7 @@
   "longitud": -68.0591,
   "activo": true,
   "telefono": "NULL",
-  "tipo":"Deporte"
+  "tipo":"Mercado"
 },{
   "_id": {
     "$oid": "62697f9d3bb568661cff93c1"
@@ -74,7 +74,7 @@
   "longitud": -68.0482,
   "activo": true,
   "telefono": "No corresponde",
-  "tipo":"Sociales"
+  "tipo":"Bici"
 },{
   "_id": {
     "$oid": "62697f9d3bb568661cff93c4"
@@ -85,7 +85,7 @@
   "longitud": -68.0539,
   "activo": true,
   "telefono": "No corresponde"
-  ,"tipo":"Otros"
+  ,"tipo":"Cursos"
 },{
   "_id": {
     "$oid": "62697f9d3bb568661cff93c5"
@@ -96,7 +96,7 @@
   "longitud": -68.0682,
   "activo": true,
   "telefono": "0299 442-7401"
-  ,"tipo":"Sociales"
+  ,"tipo":"Mercado"
 },{
   "_id": {
     "$oid": "62697f9d3bb568661cff93c6"
@@ -107,7 +107,7 @@
   "longitud": -68.0545,
   "activo": true,
   "telefono": "299-4498060"
-  ,"tipo":"Otros"
+  ,"tipo":"Cursos"
 },{
   "_id": {
     "$oid": "62697f9d3bb568661cff93c7"
@@ -117,7 +117,7 @@
   "latitud": -38.9437,
   "longitud": -68.1258,
   "activo": true,
-  "tipo":"Deporte"
+  "tipo":"Bici"
 },{
   "_id": {
     "$oid": "62697f9d3bb568661cff93c8"
@@ -127,7 +127,7 @@
   "latitud": -38.9422,
   "longitud": -68.1311,
   "activo": true,
-  "tipo":"Deporte"
+  "tipo":"Arte"
 },{
   "_id": {
     "$oid": "62697f9d3bb568661cff93c9"
@@ -148,7 +148,7 @@
   "latitud": -38.9719,
   "longitud": -68.0261,
   "activo": true
-  ,"tipo":"Otros"
+  ,"tipo":"Mercado"
 },{
   "_id": {
     "$oid": "62697f9d3bb568661cff93cb"
@@ -159,7 +159,7 @@
   "longitud": -68.0333,
   "activo": true,
   "telefono": "299-4402375"
-  ,"tipo":"Arte"
+  ,"tipo":"Bici"
 },{
   "_id": {
     "$oid": "62697f9d3bb568661cff93cc"
@@ -191,7 +191,7 @@
   "latitud": -38.9661,
   "longitud": -68.0385,
   "activo": true
-  ,"tipo":"Arte"
+  ,"tipo":"Otros"
 },{
   "_id": {
     "$oid": "62697f9d3bb568661cff93cf"
@@ -201,7 +201,7 @@
   "latitud": -38.9597,
   "longitud": -68.0314,
   "activo": true
-  ,"tipo":"Otros"
+  ,"tipo":"Bici"
 },{
   "_id": {
     "$oid": "62697f9d3bb568661cff93d0"
@@ -212,7 +212,7 @@
   "longitud": -68.0327,
   "activo": true,
   "telefono": "0299 440-2375"
-  ,"tipo":"Otros"
+  ,"tipo":"Bici"
 },{
   "_id": {
     "$oid": "62697f9d3bb568661cff93d1"
@@ -222,7 +222,7 @@
   "latitud": -38.9515,
   "longitud": -68.051,
   "activo": true
-   ,"tipo":"Deporte"
+  ,"tipo":"Bici"
 },{
   "_id": {
     "$oid": "62697f9d3bb568661cff93d2"
@@ -262,7 +262,7 @@
   "longitud": -68.1469,
   "activo": true,
   "telefono": "299-4494778"
-  ,"tipo":"Arte"
+  ,"tipo":"Otros"
 },{
   "_id": {
     "$oid": "62697f9d3bb568661cff93d6"
@@ -273,7 +273,7 @@
   "longitud": -68.1317,
   "activo": true,
   "telefono": "299-4450508"
-  ,"tipo":"Otros"
+  ,"tipo":"Arte"
 },{
   "_id": {
     "$oid": "62697f9d3bb568661cff93d7"
@@ -283,7 +283,7 @@
   "latitud": -38.9276,
   "longitud": -68.1302,
   "activo": true
-  ,"tipo":"Arte"
+  ,"tipo":"Mercado"
 },{
   "_id": {
     "$oid": "62697f9d3bb568661cff93d8"
@@ -293,7 +293,7 @@
   "latitud": -38.9277,
   "longitud": -68.1285,
   "activo": true
-  ,"tipo":"Arte"
+  ,"tipo":"Deporte"
 },{
   "_id": {
     "$oid": "62697f9d3bb568661cff93d9"
@@ -303,7 +303,7 @@
   "latitud": -38.9517,
   "longitud": -68.0592,
   "activo": true
-  ,"tipo":"Otros"
+  ,"tipo":"Bici"
 },{
   "_id": {
     "$oid": "62697f9d3bb568661cff93da"
@@ -323,7 +323,7 @@
   "latitud": -38.9296,
   "longitud": -68.1304,
   "activo": true
-  ,"tipo":"Otros"
+  ,"tipo":"Mercado"
 },{
   "_id": {
     "$oid": "62697f9d3bb568661cff93dc"
@@ -354,4 +354,66 @@
   "longitud": -68.1239,
   "activo": true
   ,"tipo":"Cursos"
+},{
+  "_id": {
+    "$oid": "62697f9d3bb568661cff93df"
+  },
+  "descripcion": "CPEM N 40",
+  "direccion": "Las Gaviotas 1690, Q8304 JCX, Neuquén, Argentina",
+  "latitud": -38.9373,
+  "longitud": -68.1204,
+  "activo": true,
+  "telefono": "0299 446-5188"
+  ,"tipo":"Cursos"
+},{
+  "_id": {
+    "$oid": "62697f9d3bb568661cff93e0"
+  },
+  "descripcion": "Polideportivo Melipal",
+  "direccion": "kilka 3299, Q8302OCD Neuquén, Argentina",
+  "latitud": -38.938,
+  "longitud": -68.1047,
+  "activo": true
+  ,"tipo":"Cursos"
+},{
+  "_id": {
+    "$oid": "62697f9d3bb568661cff93e1"
+  },
+  "descripcion": "Pulmón verde",
+  "direccion": "Entre Ríos 303, Q8300 Neuquén, Argentina",
+  "latitud": -38.952,
+  "longitud": -68.0501,
+  "activo": true,
+  "tipo":"Cursos"
+  
+},{
+  "_id": {
+    "$oid": "62697f9d3bb568661cff93e2"
+  },
+  "descripcion": "Proyecto de Oficios. ( Sector Toma norte)",
+  "direccion": "Rohde 560, Neuquén, Argentina",
+  "latitud": -38.9278,
+  "longitud": -68.1166,
+  "activo": true,
+  "tipo":"Mercado"
+},{
+  "_id": {
+    "$oid": "62697f9d3bb568661cff93e3"
+  },
+  "descripcion": "Centro Vecinal- Centro Este",
+  "direccion": "Sta Fe 797, Q8300 Neuquén, Argentina",
+  "latitud": -38.9461,
+  "longitud": -68.0574,
+  "activo": true
+  ,"tipo":"Arte"
+},{
+  "_id": {
+    "$oid": "62697f9d3bb568661cff93e4"
+  },
+  "descripcion": "Club Social y deportivo Estrella del norte (Loteo Social)",
+  "direccion": "Buffolo José 2225, Q8300 Neuquén, Argentina",
+  "latitud": -38.9313,
+  "longitud": -68.1186,
+  "activo": true
+  ,"tipo":"Arte"
 }]}
