--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   google_maps_flutter: ^2.1.3
   custom_info_window: ^1.0.1
   clippy_flutter: ^2.0.0-nullsafety.1
+  line_awesome_flutter: ^2.0.0
+  flutter_speed_dial: ^6.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
