--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   clippy_flutter: ^2.0.0-nullsafety.1
   line_awesome_flutter: ^2.0.0
   flutter_speed_dial: ^6.0.0
+  permission_handler: ^9.2.0
+  flutter_bloc: ^8.0.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
