--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   shared_preferences: ^2.0.15
   url_launcher: ^6.1.2
   internet_connection_checker: ^0.0.1+4
+  palette_generator: ^0.3.3+1
 
 dev_dependencies:
   flutter_lints: ^1.0.0
