--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,9 @@ dependencies:
   url_launcher: ^6.1.2
   internet_connection_checker: ^0.0.1+4
   palette_generator: ^0.3.3+1
+  firebase_core: ^1.19.1
+  firebase_auth: ^3.4.1
+  google_sign_in: ^5.4.0
 
 dev_dependencies:
   flutter_lints: ^1.0.0
