--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,8 @@ dependencies:
   firebase_auth: ^3.4.1
   google_sign_in: ^5.4.0
   date_format: ^2.0.6
+  flutter_svg: ^1.1.5
+  sign_in_with_apple: ^4.1.0
 
 dev_dependencies:
   flutter_lints: ^1.0.0
